# call2action

./: .env.example  .gitignore  README.md  examples.py  prompts.yaml  pyproject.toml  run.sh  setup.sh
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  README.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
docs/: CONTRIBUTING.md  SECURITY.md  github-config.md  github-overview.md  github-setup.md  prompts.md  quickstart.md
src/call2action/: __init__.py  config.py  diagram_generator.py  handover_analyzer.py  handover_pipeline.py  html_generator.py  main.py  models.py  pipeline.py  prompts.py  summarizer.py  transcriber.py
src/call2action/templates/: handover_template.html
tests/: __init__.py  test_pipeline.py  test_summarizer.py
